[package]
name = "tmux-portal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
text_trees = "0.1.2"
tmux_interface = "0.3.2"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"

[dev-dependencies]
tempfile = "3.20.0"
